cabal-version:       3.0
name:                dr-cabal
version:             0.0.0.0
synopsis:            See README for more info
description:
    See [README.md](https://github.com/chshersh/dr-cabal#dr-cabal) for more details.
homepage:            https://github.com/chshersh/dr-cabal
bug-reports:         https://github.com/chshersh/dr-cabal/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov
maintainer:          Dmitrii Kovanikov <kovanikov@gmail.com>
copyright:           2022 Dmitrii Kovanikov
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.2.3

source-repository head
  type:                git
  location:            https://github.com/chshersh/dr-cabal.git

common common-options
  build-depends:       base   ^>= 4.16
                     , relude ^>= 1.1

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       StrictData
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
    DrCabal
      DrCabal.Cli
      DrCabal.Model

  build-depends:
    , aeson                ^>= 2.1
    , aeson-pretty         ^>= 0.8.9
    , bytestring           ^>= 0.11
    , optparse-applicative ^>= 0.17

executable dr-cabal
  import:              common-options
  hs-source-dirs:      app

  main-is:             Main.hs

  build-depends:       dr-cabal

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite dr-cabal-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       dr-cabal
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
